--- a/client/public/index.html
+++ b/client/public/index.html
@@ -44,7 +44,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
   </body>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </html>
